<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginStart="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/change_server"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_ip"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:hint="@string/hint_input_ip"
            />
        <EditText
            android:id="@+id/edit_port"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:hint="@string/hint_input_port"
            android:inputType="number"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/change_gps_echo_time_gap"/>
    <EditText
        android:id="@+id/edit_gps_echo_gap_lock"
        android:layout_height="48dp"
        android:layout_width="match_parent"
        android:hint="@string/hint_input_echo_gap_lock"
        android:inputType="number"
        />
    <EditText
        android:id="@+id/edit_gps_echo_gap_run"
        android:layout_height="48dp"
        android:layout_width="match_parent"
        android:hint="@string/hint_input_echo_gap_run"
        android:inputType="number"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/change_gps_pre_time"/>
    <EditText
        android:id="@+id/edit_gps_pre_time"
        android:layout_height="48dp"
        android:layout_width="match_parent"
        android:hint="@string/hint_input_gps_pretime"
        android:inputType="number"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/change_heart_beat_time_gap"/>
    <EditText
        android:id="@+id/edit_heart_beat_gap"
        android:layout_height="48dp"
        android:layout_width="match_parent"
        android:inputType="number"
        android:hint="@string/hint_input_heart_beat_gap"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/change_tyre_perimeter"/>
    <EditText
        android:id="@+id/edit_tyre_perimeter"
        android:layout_height="48dp"
        android:layout_width="match_parent"
        android:inputType="number"
        android:hint="@string/hint_input_tyre_perimeter"
        />

    <RelativeLayout
        android:layout_marginEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/save"
            android:enabled="false"
            android:textSize="10sp" />
    </RelativeLayout>
</LinearLayout>